--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -20,7 +20,7 @@
 - title: DBX Kft.
   title-url: https://dbx.hu
   date: May 2017 - Present
-  subtitle: Software Developer
+  subtitle: Medior/Senior Software Developer
   tags:
     - tag: Java
     - tag: Clojure
@@ -41,6 +41,6 @@
 
 - title: Budapest University of Technology and Economics
   title-url: https://www.bme.hu/?language=en
-  date: 2010 - 2015
+  date: 2015
   subtitle: B.Sc. Computer Software Engineering
   timeline-side: left
